XWIKI-12501: Create a generic XWiki Select Widget.
* Minor fix (when $services.icon is not there)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -2680,7 +2680,7 @@ Recursive title display detected!##
                 #end
                 <li class="xwiki-select-option $class">
                   <input type="radio" name="$fieldName" value="$escapetool.xml($option.value)" id="${fieldName}_${count}" $checked $otherData/>
-                  <span class="xwiki-select-option-icon">$services.icon.renderHTML($option.icon)</span>
+                  <span class="xwiki-select-option-icon">$!services.icon.renderHTML($option.icon)</span>
                   <div>
                     <label for="${fieldName}_${count}">$escapetool.xml($option.name)</label>
                     #if ("$!option.description" != '')
