--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -91,7 +91,7 @@
           { 'name': $services.localization.render('core.create.type.blank'), 'value': 'blank', 'description': $services.localization.render('core.create.type.blank.description'), 'icon': 'file-white', 'data': {'type': 'blank'}}
         ]
       }])
-    #if ($xwiki.exists($services.model.createDocumentReference('', 'XWiki', 'OfficeImporter')))
+    #if ($xwiki.exists($services.model.createDocumentReference('', 'XWiki', 'OfficeImporter')) && "$!services.officemanager.serverState" == 'Connected')
       ## TODO: handle this use case with an extension point
       #set($discard = $options[0].options.add({ 'name': $services.localization.render('office.createForm.type.name'), 'value': 'office', 'description': $services.localization.render('office.createForm.type.description'), 'icon': 'file-word', 'data': {'type':'office'}}))
     #end
