--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/children.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/children.vm
@@ -41,10 +41,12 @@
     ##
     ## List the children documents using a livetable
     ##
-    #set ($collist = ['doc.title','doc.date', 'doc.author'])
+    #set ($collist = ['doc.title', 'doc.location', 'doc.date', 'doc.author', '_actions'])
     #set ($colprops = {
-      'doc.title' : { 'link' : 'view' },
-      'doc.author' : { 'link' : 'author' }
+      'doc.title'    : { 'link' : 'view' },
+      'doc.author'   : { 'link' : 'author', 'type': 'text', 'filterable': true},
+      'doc.location' : { 'link' : 'view', 'type': 'text', 'filterable': true},
+      '_actions'     : { 'actions': ['copy', 'delete', 'rename'] }
     })
     #set ($urlParameters = "xpage=getdocuments&childrenOf=$escapetool.url($doc.space)&queryFilters=unique")
     #set ($options = { 
