XWIKI-12486: Missing breadcrumb for certain views.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/contentheader.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/contentheader.vm
@@ -7,9 +7,11 @@
       $services.rendering.render($uix.execute(), 'xhtml/1.0')
     #end
     <div id="document-title"><h1>$titleToDisplay</h1></div>
-    <div class="xdocLastModification">
-      $services.localization.render('core.footer.modification', [$xwiki.getUserName($tdoc.author), $xwiki.formatDate($tdoc.date)])
-    </div>
+    #if (!$doc.isNew())
+      <div class="xdocLastModification">
+        $services.localization.render('core.footer.modification', [$xwiki.getUserName($tdoc.author), $xwiki.formatDate($tdoc.date)])
+      </div>
+    #end
   </div>
   #if($displayContentMenu)
     <div class="document-menu col-xs-12 col-md-5">
