--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/docdoesnotexist.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/docdoesnotexist.vm
@@ -8,15 +8,10 @@
   $response.setStatus(404)
   #template("startpage.vm")
   <div class="main">
-  <div class="row">
-    <div id="contentmenu" class="actionmenu col-xs-12">
-      #template("menus_content.vm")
-    </div>
-    #if ($displayMoreActionsMenu)
-      <hr />
-    #end
-  </div>
   <div id="mainContentArea">
+  #template("hierarchy.vm")
+  #set($titleToDisplay = $doc.getPlainTitle())
+  #template('contentheader.vm')
   #if($xwiki.exists("XWiki.DocumentDoesNotExist"))
     $xwiki.includeForm("XWiki.DocumentDoesNotExist",false)
   #else
