XWIKI-12522: Children viewer displays hidden pages, no matter the user's preference. XWIKI-12543: Create a "siblings" viewer. XWIKI-12218: Adapt the Document Index of a space for nested documents.
* Add the displayHidden parameter to children.vm and siblings.vm

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/refactoring_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/refactoring_macros.vm
@@ -45,7 +45,7 @@
   ## Check if the document can have children.
   #if ($doc.name == $defaultDocumentName)
     #countDocumentChildren($doc.documentReference $childCount)
-    #set ($childrenURL = $escapetool.xml($doc.getURL('view', 'viewer=children')))
+    #set ($childrenURL = $escapetool.xml($doc.getURL('view', 'viewer=children&displayHidden=true')))
     <dt>
       <label>
         <input type="checkbox" name="deep" value="true" />
