XWIKI-12486: Missing breadcrumb for certain views.
* Fixing escaping problem.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/docdoesnotexist.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/docdoesnotexist.vm
@@ -10,7 +10,7 @@
   <div class="main">
   <div id="mainContentArea">
   #template("hierarchy.vm")
-  #set($titleToDisplay = $doc.getPlainTitle())
+  #set($titleToDisplay = $escapetool.xml($doc.getPlainTitle()))
   #template('contentheader.vm')
   #if($xwiki.exists("XWiki.DocumentDoesNotExist"))
     $xwiki.includeForm("XWiki.DocumentDoesNotExist",false)
