[Misc] Fix escaping problem.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/pdfoptions.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/pdfoptions.vm
@@ -9,7 +9,7 @@
   <div class="main layoutsubsection">
   <div id="mainContentArea">
     #template('hierarchy.vm')
-    #set($titleToDisplay = $doc.getPlainTitle())
+    #set($titleToDisplay = $escapetool.xml($doc.getPlainTitle()))
     #template('contentheader.vm')
     #error($services.localization.render('core.rename.nonexistingDocument'))
   </div>## mainContentArea
